@@ -100,6 +100,9 @@ supports all attributes of <code>&lt;fileset&gt;</code>
 	      <li>cr: convert all EOLs to a single CR</li>
 	      <li>lf: convert all EOLs to a single LF</li>
 	      <li>crlf: convert all EOLs to the pair CRLF</li>
+	      <li>mac: convert all EOLs to a single CR</li>
+	      <li>unix: convert all EOLs to a single LF</li>
+	      <li>dos: convert all EOLs to the pair CRLF</li>
 	    </ul>
 	    Default is based on the platform on which you are running
 	    this task.  For Unix platforms, the default is &quot;lf&quot;.
